<resources>
    <string name="app_name">CallVault</string>
    <string name="settings">설정</string>
    <string name="recordings">녹음 목록</string>
    <string name="recording_on">녹음 활성화</string>
    <string name="recording_off">녹음 비활성화</string>
    <string name="no_recordings">녹음 파일이 없습니다</string>
    <string name="delete">삭제</string>
    <string name="share">공유</string>
    <string name="play">재생</string>
    <string name="pause">일시정지</string>
    <string name="recording_detail">녹음 상세</string>
    <string name="file_info">파일 정보</string>
    <string name="auto_delete">자동 삭제</string>
    <string name="storage_location">저장 위치</string>
    <string name="file_naming">파일명 규칙</string>
    <string name="quality">품질</string>
    <string name="permission_required">권한 필요</string>
    <string name="grant_permission">권한 허용</string>
    <string name="recording">녹음중</string>
    <string name="recording_complete">녹음 완료</string>
    <string name="low_storage">저장 공간 부족</string>
    <!-- 직관적 UI/UX를 위한 문자열 리소스 -->
</resources>